[package]
name = "smux"
version = "0.3.0"
edition = "2021"
description = "A fast tmux session picker with pinned sessions and a collapsible window tree"
license = "MIT"
repository = "https://github.com/jeffdt/smux"
authors = ["Jeff DiTeodoro"]

[[bin]]
name = "smux"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
